# color_diff

./: .gitignore  CMakeLists.txt  README.md
data/: 1.in  3.in  4.in  5.in  6.in  7.in
diff/: diff.hpp  main  main.cpp  solution.cpp  standard.c  sum.py
src/: after.txt  concurrence.c  main.cpp
tests/: CMakeLists.txt
tests/src/test1/: 1_befor.txt  2_after.txt  5_after.txt  main.cpp  test1.cpp
tests/src/test_efficiency/: 1_after.txt  1_befor.txt  test_efficiency.cpp
tests/src/test_lcs/: callgrind.out.4479  test_lcs  test_lcs.cpp
tests/src/test_lcs_dp/: 1_after.txt  test_lcs_dp.cpp
